--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Untitled Document</title>
     <!-- Bootstrap -->
-	<!-- <link href="../css/bootstrap.css" rel="stylesheet"> -->
-	<link href="../Herramientas_Telematicas/wilmarguevaracabrera/css/bootstrap-3.3.4.css" rel="stylesheet" type="text/css">
+	<!-- <link href="css/bootstrap.css" rel="stylesheet"> -->
+	<link href="css/bootstrap-3.3.4.css" rel="stylesheet" type="text/css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -17,19 +17,19 @@
 		<![endif]-->
   </head>
   <body>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-	<script src="../Herramientas_Telematicas/js/jquery-1.11.2.min.js"></script>
-
-	<!-- Include all compiled plugins (below), or include individual files as needed --> 
 	<div class="container">
 <div class="row">
-        <div class="col-md-6"><img src="../Herramientas_Telematicas/wilmarguevaracabrera/img/ejemplo.jpg" alt="Placeholder image" height="100" class="img-responsive"></div>
-        <div class="col-md-6">
+        <div class="col-md-2"><img src="img/ejemplo.jpg" class="img-responsive" alt="Placeholder image"></div>
+        <div class="col-md-10">
           <h1>HERRAMIENTAS TELEMATICAS</h1>
         </div>
       </div>
 </div>
-    <!-- <script src="../js/bootstrap.js"></script> -->
-  <script src="../Herramientas_Telematicas/wilmarguevaracabrera/js/bootstrap-3.3.4.js" type="text/javascript"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+	<script src="js/jquery-1.11.2.min.js"></script>
+
+	<!-- Include all compiled plugins (below), or include individual files as needed --> 
+	<!-- <script src="js/bootstrap.js"></script> -->
+  <script src="js/bootstrap-3.3.4.js" type="text/javascript"></script>
 </body>
 </html>
